# DepthCharge

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md
docs/briefs/: M0-trace-and-harness.md  MP-portfolio-portal.md  TEMPLATE.md
engine/include/depthcharge/: feed_event.hpp
harness/include/dc_harness/: trace.hpp
harness/replay/: .gitignore  NOTES.md
harness/src/: dc_replay_main.cpp  trace.cpp
harness/tests/: dc_tests.cpp
tools/: capture_anvil.py  slice_trace.py
